  becomes one line in the strip label. See documentation for more
  details. Labellers offer the `multi_line` argument to control
  whether to display one or multiple lines. Furthermore, referring to
  `x` in backquoted expressions with `label_bquote()` is
  deprecated. You can now refer to the variable names
  instead. (@lionel-)

* There is a new labeller `label_context()`. Its behaviour depends on
  the number of factors facetted over. With a single factor, it
  displays only the values, just as before. But with multiple factors
  (e.g. with formulae such as `~cyl + am`), the labels are dispatched
  to `label_both()` to display both the variables and the values and
  make the plot clearer. (@lionel-)

* `show_guide` has been renamed to `show.legend`: this more accurately
  reflects what it does (control appearance in legend), and uses the same
  convention as other ggplot2 arguments (i.e. a `.` between names).

* New `cut_width()` is a convenient replacement for the verbose
  `plyr::round_any()`, with the additional benefit of offering more
  control.

* New `luv_colours` dataset which contains the locations of all
  built-in `colors()` in Luv space.

* `scale_*_gradient2()` defaults to using Lab colour space.

* `scale_fill_grey()` now uses red for missing values. This matches
  `scale_colour_grey()` and makes it obvious where missing values lie.
  Control with `na.value`.

* `geom_label()` works like `geom_text()` but draws a solid background
  behind each label (#1039).

* `stat_bindot()` has been removed because it's so tightly coupled to
  `geom_dotplot()`. If you happened to use `stat_bindot()`, just change to
  `geom_dotplot()` (#1194).

* Character labels in `facet_grid()` are no longer (incorrectly) coerced into
  factors. This caused problems with custom label functions (#1070).

* `scale_y_continuous()` now also transforms the `lower`, `middle` and `upper`
  aesthetics used by `geom_boxplot()`: this only affects