@@ -212,6 +212,7 @@ export(annotation_logticks)
 export(annotation_map)
 export(annotation_raster)
 export(arrow)
+export(as_labeller)
 export(autoplot)
 export(benchplot)
 export(borders)
