@@ -61,9 +61,9 @@ the default plot specification, e.g. \code{\link{borders}}.}
 }
 \description{
 \code{geom_rect} and \code{geom_tile} do the same thing, but are
-paramterised differently. \code{geom_rect} uses the locations of the four
+parameterised differently. \code{geom_rect} uses the locations of the four
 corners (\code{xmin}, \code{xmax}, \code{ymin} and \code{ymax}).
-\code{geom_tile} uses the center of the tile and it's size (\code{x},
+\code{geom_tile} uses the center of the tile and its size (\code{x},
 \code{y}, \code{width}, \code{height}). \code{geom_raster} is a high
 performance special case for when all the tiles are the same size.
 }
